--- a/suwclosegap/suwapp/templates/suwapp/home.html
+++ b/suwclosegap/suwapp/templates/suwapp/home.html
@@ -4,10 +4,7 @@
 <br>
 <h3> The Wage Gap </h3>
   <p>
-    ABCD
-  </p>
-  <p>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris at lectus vitae mi dapibus mattis sed et turpis. Proin nisi ligula, faucibus tristique posuere id, gravida sed dui. Nam commodo justo ac porttitor posuere. Etiam blandit, dui a vulputate congue, nibh nisi imperdiet est, quis tincidunt ipsum orci a leo. Aenean tincidunt eros quis vehicula luctus. Nulla commodo lectus sed lorem faucibus, non interdum est facilisis. Nulla facilisi. Curabitur a cursus metus.
+    Working to achieve Equal pay for equal jobs
   </p>
   <br>
 <h3> Login </h3>
